# gangtise-mcp-server

./: .gitignore  Gangtise 开放平台 - 人工智能服务完整开发文档指南.md  README.md  gangtise_client.py  gangtise开放平台 - accessToken获取接口文档.md  pyproject.toml  server.py
docs/: analyst-playbook.md
docs/执行报告/: 2026-03-04_14-06-45_Gangtise_MCP_Server开发.md  2026-03-04_15-03-20_MCP_Server对比官方Skill优化.md  2026-03-05_23-02-15_TMT个股研究Prompt模板.md
prompts/: TMT个股深度研究_prompt模板.md
scripts/: daily_report.sh  test_auth.py
tools/: __init__.py  agent.py  indicator.py  knowledge.py  report.py
